=======
CHANGES
=======

- pre-calculate used and idle cpu in sql statement to avoid rounding issues
  that can cause an display overflow in CPU widget

2017/03/30 0.1.0
================

- initial release