@@ -55,7 +55,7 @@ Hotkeys
 * ``2``  .. show I/O statistics for network and disk
 * ``3``  .. show aggregated query duration based on `jobs_log`_
 * ``x``  .. toggle nodes/aggregation view
-* ``f1`` .. enable/disable job logging (this also sets the ``stats.jobs_log``
+* ``f3`` .. enable/disable job logging (this also sets the ``stats.jobs_log``
 cluster setting)
 
 Known Issues
